--- a/pages/index.html
+++ b/pages/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container overflow-hidden">
         <div class="page-header">
-            <h1>交易
+            <h1>模拟交易
                 <small>aitrad.in</small>
             </h1>
         </div>
