--- a/pages/bitfinex.html
+++ b/pages/bitfinex.html
@@ -35,8 +35,8 @@
         <div class="row">
             <div class="col-md-12">
                 <h1>bitfinex</h1>
-                    <table class="table table-bordered">
-                            <thead>
+                    <table class="table table-striped">
+                            <thead class="thead-dark">
                                 <tr>
                                     <th><h1>交易对</h1></th>
                                     <th><h1>最新价格</h1></th>
