添加币种，变更bfx路径

--- a/pages/bfx.html
+++ b/pages/bfx.html
@@ -17,7 +17,7 @@
 
     注意：bitfinex网站无法直接访问
     使用以下方式访问：
-    /bitfinex/public_tickers
+    /bfx/public_tickers
     返回值：
     [ SYMBOL, BID, BID_SIZE, ASK, ASK_SIZE, DAILY_CHANGE, DAILY_CHANGE_PERC, LAST_PRICE, VOLUME, HIGH, LOW ]
 -->
@@ -59,7 +59,7 @@
     <script>
         // 1.获取bitfinex的全部交易对
         // 1.1.获取bitfinex的全部交易对的url
-        var bitfinex_url = "/bitfinex/public_tickers";
+        var bitfinex_url = "/bfx/public_tickers";
         //获取btcusd的最新价格
         var btcusdt = 0;
         // 1.2.使用ajax请求bitfinex的全部交易对的url
