--- a/pages/index.html
+++ b/pages/index.html
@@ -25,8 +25,8 @@
         </div>
         <div class="row gy-5">
             <div class="col-sm-12">
-                <a href="binance.html" class="btn btn-primary btn-lg btn-block" role="button"><h1>binance</h1></a>
-                <a href="bitfinex.html" class="btn btn-primary btn-lg btn-block" role="button"><h1>bitfinex</h1></a>
+                <a href="bn.html" class="btn btn-primary btn-lg btn-block" role="button"><h1>binance</h1></a>
+                <a href="bfx.html" class="btn btn-primary btn-lg btn-block" role="button"><h1>bitfinex</h1></a>
             </div>
         </div>
     </div>
