--- a/pages/bfx.html
+++ b/pages/bfx.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>bitfinex</h1>
+                <h1 class="display-1">bitfinex</h1>
                     <table class="table table-striped">
                             <thead class="thead-dark">
                                 <tr>
