--- a/pages/bfx.html
+++ b/pages/bfx.html
@@ -4,10 +4,10 @@
     2.引入bootstrap.js
     3.引入jquery.js
     
-    获取bitfinex的全部符号，符号的交易量，以及符号的最新价格
+    获取bitfinex的全部符号，符号的交易量，以及符号的价格
     1.获取bitfinex的全部符号
-    2.获取符号的最新价格
-    3.将符号和最新价格显示在页面上
+    2.获取符号的价格
+    3.将符号和价格显示在页面上
 
     1.获取bitfinex的全部符号
     1.1.获取bitfinex的全部符号的url
@@ -41,7 +41,7 @@
                             <thead class="thead-dark">
                                 <tr>
                                     <th><h1>符号</h1></th>
-                                    <th><h1>最新价格</h1></th>
+                                    <th><h1>价格</h1></th>
                                     <th><h1>24h交易量▼</h1></th>
                                     <th><h1>24h涨幅%</h1></th>
                                 </tr>
@@ -62,13 +62,13 @@
         // 1.获取bitfinex的全部符号
         // 1.1.获取bitfinex的全部符号的url
         var bitfinex_url = "/bfx/public_tickers";
-        //获取btcusd的最新价格
+        //获取btcusd的价格
         var btcusdt = 0;
         // 1.2.使用ajax请求bitfinex的全部符号的url
         $.get(bitfinex_url, function (data) {
             // 1.3.获取bitfinex的全部符号的数据
             var bitfinex_data = data;
-            //从数据中找到btcusdt的最新价格
+            //从数据中找到btcusdt的价格
             for (var i = 0; i < bitfinex_data.length; i++) {
                 if (bitfinex_data[i][0] == "tBTCUSD") {
                     btcusdt = bitfinex_data[i][7];
@@ -83,7 +83,7 @@
                 var symbol = bitfinex_data[i][0];
                 //移除符号的第一个字符
                 symbol = symbol.substring(1);
-                // 1.4.4.获取最新价格
+                // 1.4.4.获取价格
                 var last_price = bitfinex_data[i][7];
                 // 1.4.5.获取交易量
                 var volume = bitfinex_data[i][8] * last_price;
@@ -95,7 +95,7 @@
                 var daily_change_perc = bitfinex_data[i][6];
                 //将涨跌幅转换为百分比
                 daily_change_perc = daily_change_perc * 100;
-                // 1.4.7.将符号和最新价格显示在页面上,字体h2
+                // 1.4.7.将符号和价格显示在页面上,字体h2
                 $("#bitfinex_tbody").append("<tr><td><h2>" + symbol + "</h2></td><td><h2>" + last_price + "</h2></td><td><h2>" + volume + "</h2></td><td><h2>" + daily_change_perc + "</h2></td></tr>");
             }
         });
@@ -105,7 +105,7 @@
         //排序字段的文字末尾添加三角形字符，例如：符号▲，符号▼
         //注意添加三角形图标的时候，需要先清空原来的图标
         $("th").click(function () {
-            titles = ["符号", "最新价格", "24h交易量", "24h涨幅%"];
+            titles = ["符号", "价格", "24h交易量", "24h涨幅%"];
             suffex = ["▲", "▼"]; //升序，降序
             //当前点击的标题
             var title = $(this).text();
