--- a/pages/bfx.html
+++ b/pages/bfx.html
@@ -34,11 +34,15 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="display-1">bitfinex</h1>
+        <div class="page-header">
+            <h1 class="display-1">市场清单
+                <small class="display-5">bitfinex.com</small>
+            </h1>
+        </div>
         <div class="row">
             <div class="col-md-12">
                     <table class="table table-striped">
-                            <thead class="thead-dark">
+                            <thead class="table-dark">
                                 <tr>
                                     <th><h1>符号</h1></th>
                                     <th><h1>价格</h1></th>
