--- a/pages/index.html
+++ b/pages/index.html
@@ -12,9 +12,7 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-    <!-- <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <!-- <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/mhDoLbDldZc3qpsJHpLogda//BVZbgYuw6kof4u2FrCedxOtgRZDTHgHUhOCVim" crossorigin="anonymous"></script>
 </head>
@@ -22,14 +20,12 @@
     <div class="container overflow-hidden">
         <div class="page-header">
             <h1 class="display-1">模拟交易
-                <small>aitrad.in</small>
+                <small class="display-5">aitrad.in</small>
             </h1>
         </div>
-        <div class="row gy-5">
-            <div class="col-sm-12">
-                <a href="bn.html" class="btn btn-primary btn-lg btn-block" role="button"><h1>binance</h1></a>
-                <a href="bfx.html" class="btn btn-primary btn-lg btn-block" role="button"><h1>bitfinex</h1></a>
-            </div>
+        <div class="d-grid gap-2 d-md-block">
+            <button href="bn.html" class="btn btn-primary" type="button"><h1 class="display-3">binance</h1></a>
+            <button href="bfx.html" class="btn btn-primary" type="button"><h1 class="display-3">bitfinex</h1></a>
         </div>
     </div>
 </body>
