--- a/pages/index.html
+++ b/pages/index.html
@@ -24,8 +24,8 @@
             </h1>
         </div>
         <div class="d-grid gap-2 d-md-block">
-            <button href="bn.html" class="btn btn-primary" type="button"><h1 class="display-3">binance</h1></a>
-            <button href="bfx.html" class="btn btn-primary" type="button"><h1 class="display-3">bitfinex</h1></a>
+            <a href="bn.html" class="btn btn-primary" ><h1 class="display-3">binance</h1></a>
+            <a href="bfx.html" class="btn btn-primary"><h1 class="display-3">bitfinex</h1></a>
         </div>
     </div>
 </body>
