--- a/pages/index.html
+++ b/pages/index.html
@@ -5,16 +5,16 @@
     binance，点击打开binance.html
     bitfinex，点击打开bitfinex.html
 
-    使用bootstrap框架，兼容移动端
+    使用bootstrap 5框架，兼容移动端
  -->
 
 <html>
 <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="/js/jquery.min.js"></script>
+    <link href="/css/bootstrap.min.css" rel="stylesheet" >
+    <script src="/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <div class="container overflow-hidden">
