--- a/pages/bfx.html
+++ b/pages/bfx.html
@@ -21,8 +21,7 @@
     返回值：
     [ SYMBOL, BID, BID_SIZE, ASK, ASK_SIZE, DAILY_CHANGE, DAILY_CHANGE_PERC, LAST_PRICE, VOLUME, HIGH, LOW ]
 -->
-<!DOCTYPE html>
-<html lang="zh">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>bitfinex</title>
