--- a/pages/index.html
+++ b/pages/index.html
@@ -11,13 +11,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>模拟交易</title>
     <script src="/js/jquery.min.js"></script>
     <link href="/css/bootstrap.min.css" rel="stylesheet" >
     <script src="/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div class="container overflow-hidden">
+    <div class="container">
         <div class="page-header">
             <h1 class="display-1">模拟交易
                 <small class="display-5">aitrad.in</small>
